Fixed margin and alignment for portfolio

--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -9,9 +9,11 @@
     justify-self: center;
     margin: 0 0 4rem 0;
 
+    text-align: center;
+
     li {
         display: inline-block;
-        margin: 0 0 2rem 0;
+        margin: 0 0 1rem 0;
 
         &:not( :last-child ) {
             @include dot-pseudo( $color: $primary-light, $margin: 0 1.5rem );
