--- a/src/styles/components/common/_form.scss
+++ b/src/styles/components/common/_form.scss
@@ -32,6 +32,10 @@
 }
 
 .form__meta {
-    margin: 4rem 0 0 0;
+    margin: 2rem 0 0 0;
     text-align: right;
+
+    @media ( min-width: $breakpoint-medium ) {
+        margin: 4rem 0 0 0;
+    }
 }
